done styling the navbar

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
     <!-- NAVBAR -->
 
-    <nav class="main-nav">
+    <nav id="main-nav" class="">
         <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
         <div class="nav-context d-flex justify-content-between">
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
@@ -40,7 +40,7 @@
     <!-- FOOD MENU SECTION -->
 
     <main id="food-menu">
-        <div class="food-list container">
+        <div class="food-list container-fluid">
             <!-- FOOD ITEM 1 -->
             <div class="food-items">
                 <img src="https://www.w3schools.com/w3images/sandwich.jpg" alt="sandwich">
@@ -51,7 +51,7 @@
 
             <!-- FOOD ITEM 2 -->
             <div class="food-items">
-                <img src="" alt="">
+                <img src="https://www.w3schools.com/w3images/steak.jpg" alt="">
                 <h3 class="food-name">Let Me Tell You About This Steak</h3>
                 <p class="food-description">Once again, some random text to lorem lorem lorem lorem ipsum text praesent tincidunt ipsum lipsum.</p>
             </div>
