had to change a few things the website was zoomed in to much

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <nav id="main-nav" class="">
         <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
-        <div class="nav-context d-flex justify-content-between">
+        <div class="nav-context d-flex justify-content-between container">
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                 <i class="fa fa-bars"></i>
             </a>
@@ -40,7 +40,7 @@
     <!-- FOOD MENU SECTION -->
 
     <main id="food-menu">
-        <div class="food-list container-fluid">
+        <div class="food-list container">
             <!-- FOOD ITEM 1 -->
             <div class="food-items">
                 <img src="https://www.w3schools.com/w3images/sandwich.jpg" alt="sandwich">
