done styling the food menu

--- a/index.html
+++ b/index.html
@@ -112,13 +112,15 @@
         <ul class="pagination justify-content-center">
             <li class="page-item"><a class="page-link" href="javascript:void(0);"><i class="fa fa-angle-double-left" aria-hidden="true"></i>
 </a></li>
-            <li class="page-item"><a class="page-link" href="javascript:void(0);">1</a></li>
+            <li class="page-item"><a class="page-link active-page" href="javascript:void(0);">1</a></li>
             <li class="page-item"><a class="page-link" href="javascript:void(0);">2</a></li>
             <li class="page-item"><a class="page-link" href="javascript:void(0);">3</a></li>
             <li class="page-item"><a class="page-link" href="javascript:void(0);">4</a></li>
             <li class="page-item"><a class="page-link " href="javascript:void(0);"><i class="fa fa-angle-double-right" aria-hidden="true"></i></a></li>
         </ul>
     </main>
+
+    <hr>
 
     <!-- FOOD MAN SECTION -->
     <section id="food-man" class="food-man">
