done with food man section

--- a/index.html
+++ b/index.html
@@ -123,18 +123,24 @@
     <hr>
 
     <!-- FOOD MAN SECTION -->
-    <section id="food-man" class="food-man">
+    <section id="food-man" class="food-man container text-center">
         <div class="food-man-context">
             <h2 class="food-man-title">about me, the food man</h2>
             <img src="https://www.w3schools.com/w3images/chef.jpg" alt="chef">
-            <h3 class="">I am Who I Am!</h3>
-            <h4 class="">With Passion For Real, Good Food</h4>
-            <p class="">Just me, myself and I, exploring the universe of unknownment. I have a heart of love and an interest of lorem ipsum and
+            <div class="food-man-text">
+              <h3>I am Who I Am!</h3>
+            <h4><em>With Passion For Real, Good Food</em></h4>
+            <p>Just me, myself and I, exploring the universe of unknownment. I have a heart of love and an interest of lorem ipsum and
             mauris neque quam blog. I want to share my world with you. Praesent tincidunt sed tellus ut rutrum. Sed vitae justo
             condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla. Praesent tincidunt sed tellus ut rutrum.
-            Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+            Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>  
+            </div>
+            
         </div>
     </section>
+
+    <hr>
+
 </body>
 
 <script src="main.js">
